# m5stickv-tensorflow-lite-micro

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/components/: CMakeLists.txt
lib/components/boards/include/: boards.h
lib/components/boards/m5stick/include/: m5stick.h
lib/components/config/: global_build_info_time.h  global_build_info_version.h  global_config.cmake  global_config.h  global_config.mk
lib/components/drivers/lcd/include/: lcd.h
lib/drivers/include/: fpioa.h
src/micro/tensorflow/tensorflow/lite/micro/examples/hello_world/: main.cc  output_handler.cc
